  - Speedimprovements in case we download mime-entities.
  - Added possibility to extract message/rfc822 attachments and store them as
    the original message in a folder. 
  - Right to left languages implementation initiated
  - Enable people with file_uploads = off to still send mail. Patch from Seth
    E. Randall.

  
Version 1.2.7 -- CVS
--------------------
  - Added possibility to use multiple compose windows without loss
    of attachements.
  - Fixed forward message/rfc822 attachments from a search 
  - Fix SpamCop plugin.
  - Fixed send MDN link.
  - Fixed dealing with \r\n and \n in smtp.php. 
  - Fixed to, cc, bcc arrays in message->header
  - Speed optimizements in generating message-lists.    
  - Fixed loss of attachment with html addressbook.
  - Fixed saving drafts with attachments

  
Version 1.2.6 -- April 29 2002 
--------------------
  - A complete MagicHTML rewrite since the existing codebase was
    causing too many XSS problems. Hopefully now Nick Cleaton will
    leave us alone. :) Testing credits go to Nick.
  - Fix for cross-site scripting vulnerability (bug #545933)
    Reported by Nick Cleaton.
  - Changing "emtpy" to "purge" for more clarity.
  - Fix for cross-site scripting vulnerability (bug #544658)
    Reported by Nick Cleaton.
  - Fix for incorrect word wrap in Opera (bug #495073)
  - Workaround for older prefs: some of them contain "None" for
    left_refresh (bug #540108)
  - Fix for entities in cc and bcc fields on message display (bug #522493)
  - Fixes for quoted values in the addressbook by David Rees (bug #538389)
  - Fixed src/src problem (bug #538803)
  - Fixed so non-ascii searches no longer fail both when searching
    and when applying filters (bug #520918)
  - Added POP3 Before SMTP option (feature request: #498428)
  - Added a server-side thread sorting option per folder
  - Added a server-side sorting global option
  - Compose in new window size can be set in Display prefs.
  - Logout error system unified.