@@ -19,6 +19,15 @@ Version 1.3.0-DEVEL -- CVS
   
 Version 1.2.7 -- CVS
 --------------------
+  - fix for 'compose as new' link. bug #554886
+  - fix charset format in the admin plugin. bug #550725
+  - fix for errant '.' in default_folder_prefix. bug #551310
+  - fix for folder names with '?' and '*'. bug # 559257, #552180
+  - added the ability to search without the charset argument. #552288
+  - Made /noselect node display optional. bug #554988, patch #452178 
+  - Improved support for macosx IMAP server thanks Brian Haun
+  - Added macosx friendly search, thanks Brian Haun bug #553038
+  - Fixed word wrap problems when sending mail. bug #552961, #556143
   - Added possibility to use multiple compose windows without loss
     of attachements.
   - Fixed forward message/rfc822 attachments from a search 
